# Love2D-3D_Engine

./: .gitignore  CMakeLists.txt  LICENSE.md  Model Attributions.md  README.md  build.lua  cloud_sim.lua  conf.lua  controls.lua  engine.lua  gpu_renderer.lua  ground_system.lua  main.lua  networking.lua  object.lua  plan for glb loading.txt  relayServer.lua  view_math.lua
.github/workflows/: cmake-multi-platform.yml
NativePort/: CMakeLists.txt  build_trueflight.py
NativePort/Docs/: GameplayLoopBrainstorming.md  april-seventh-update-plans.txt  legacy-main-2026-03.cpp.txt
NativePort/Native/: windows_app_icon.rc.in
NativePort/Native/include/NativeGame/: BlobSync.hpp  Flight.hpp  GltfLoader.hpp  Hash.hpp  HostedNetworking.hpp  HudCanvas.hpp  Math.hpp  NetProtocol.hpp  NetTransport.hpp  ProceduralAudio.hpp  RenderTypes.hpp  SteamSupport.hpp  StlLoader.hpp  TerrainChunkBakeCache.hpp  VulkanRenderer.hpp  World.hpp  WorldStore.hpp  WorldWire.hpp
NativePort/Native/shaders/: hud.frag  scene.frag
NativePort/Native/src/: SteamSupport.cpp  VulkanRenderer.cpp  main.cpp
NativePort/Native/src/App/: AppLogging.cpp  AppLogging.hpp  AppRunner.cpp  AppRunner.hpp  AppSmokeApi.hpp  AppState.cpp  AppState.hpp  AppTypes.hpp  BodySim.cpp  BodySim.hpp  GamepadControls.cpp  GamepadControls.hpp  ImGuiSupport.cpp  ImGuiSupport.hpp  InputBindings.cpp  InputBindings.hpp  MenuController.cpp  MenuController.hpp  Preferences.hpp  RuntimeProfiler.hpp  RuntimeTuning.hpp  TerrainStreamController.cpp  TerrainStreamController.hpp  VisualAssets.hpp  WorldCatalog.cpp  WorldCatalog.hpp
NativePort/Native/tests/: native_smoke.cpp
Source/Core/: Engine.lua  GameDefaults.lua  Logger.lua
Source/Input/: Controls.lua  InputSystem.lua
Source/Math/: ViewMath.lua
Source/ModelModule/: Init.lua  PaintRuntime.lua  Persistence.lua
Source/ModelModule/Importers/: GltfImporter.lua  StlImporter.lua
Source/Net/: HostedServer.lua  Networking.lua  RelayServer.lua  SyncSystem.lua
Source/Render/: GpuRenderer.lua
Source/Sim/: AeroModel.lua  FlightTrim.lua  SdfTerrainField.lua
Source/Systems/: FlightDynamicsSystem.lua  MapRasterWorker.lua  ModelSystem.lua  TerrainMeshingWorker.lua  TerrainSdfSystem.lua  ViewSystem.lua
Source/Ui/: HudSystem.lua  PauseMenuSystem.lua
Tests/: ControlsStrictModifiers.lua  FlightDynamics.lua  GameDefaultsContracts.lua  HostedServerAuthoritative.lua  MainPauseMenuIntegration.lua  ModelModuleContract.lua  PacketCodecAndNetworking.lua  RestartSnapshotCompat.lua  TerrainChunkStreaming.lua  main.lua
docs/: model-module-migration.md  model-module-ops.md  model-module-review.md  model-module-spec.md
docs/adr/: adr-0001-model-module.md
licenses/: THIRD_PARTY_LICENSES.txt
model_module/: init.lua  material_runtime.lua  net_blob_sync.lua  paint_runtime.lua
model_module/importers/: gltf_importer.lua  stl_importer.lua
portSource/Source/Audio/: ProceduralAudio.lua
tests/: model_module_contract.lua
